Improve readability: darken quest containers and resize logo for better fit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="assets/group2.png" alt="X Trickster Online Logo" class="logo">
+            <img src="assets/XTO_Logo_Transparent.png" alt="X Trickster Online Logo" class="logo">
             <h1>X Trickster Online Dailies Tracker</h1>
             <p class="reset-info">Resets daily at 9 PM Uruguay time. Last reset: <span id="lastReset"></span></p>
             <div id="timer">Time until reset: <span id="countdown">00:00:00</span></div>
