Fix Paradise MonsterGuild: Add Hunter Yuri quest before Assistant Hunter

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="assets/logo.png" alt="X Trickster Online Logo" class="logo">
             </a>
             <h1>X Trickster Online Dailies Tracker</h1>
-            <p class="reset-info">Resets daily at 9 PM Uruguay time.<span id="lastReset"></span></p>
+            <p class="reset-info" style="display: none;">Resets daily at 9 PM Uruguay time.<span id="lastReset"></span></p>
             <div id="timer">Time until reset: <span id="countdown">00:00:00</span></div>
 
         </div>
