Add quest popup images and improve modal styling - Added popup images for Blooming Cora, Megalopolis, Caballa/Azteca, Paradise, Beach Areas, and Southeast Forest zones - Improved modal design with game-themed background and golden border - Moved quest title to top of modal for better UX - Fixed JavaScript syntax error (trailing comma) - Cleaned up unused assets - Updated quest data structure to support individual quest images

--- a/index.html
+++ b/index.html
@@ -14,34 +14,11 @@
             </a>
             <h1>X Trickster Online Dailies Tracker</h1>
             <p class="reset-info" style="display: none;">Resets daily at 9 PM Uruguay time.<span id="lastReset"></span></p>
-            <div id="timer">Time until reset: <span id="countdown">00:00:00</span></div>
+            <div id="timer">Time until reset: <span id="countdown">00:00:00</span> MG = Monster Guild</div>
 
         </div>
 
-    <div class="tabs">
-        <button class="tab active" onclick="showSection('zoneDaily')">Zone Daily Quests</button>
-        <button class="tab" onclick="showSection('developerH')">Developer H Dailies</button>
-        <button class="tab" onclick="showSection('monsterGuild')">Monster Guild Quests</button>
-        <button class="tab" onclick="showSection('statistics')">Statistics</button>
-    </div>
-
-    <div id="zoneDaily" class="section active">
-        <div class="counter" id="counter-zoneDaily">0/11 completed</div>
-        <progress class="progress-bar" id="progress-zoneDaily" value="0" max="1"></progress>
-        <div id="quests-zoneDaily"></div>
-    </div>
-
-    <div id="developerH" class="section">
-        <div class="counter" id="counter-developerH">0/11 completed</div>
-        <progress class="progress-bar" id="progress-developerH" value="0" max="1"></progress>
-        <div id="quests-developerH"></div>
-    </div>
-
-    <div id="monsterGuild" class="section">
-        <div class="counter" id="counter-monsterGuild">0/39 completed</div>
-        <progress class="progress-bar" id="progress-monsterGuild" value="0" max="1"></progress>
-        <div id="quests-monsterGuild"></div>
-    </div>
+    <div id="zones-container"></div>
 
     <div id="statistics" class="section">
         <h2>Overall Statistics</h2>
@@ -56,6 +33,15 @@
         <div class="stat-item">
             <span class="stat-label">Current Streak (Days):</span>
             <span class="stat-value" id="streak">0</span>
+        </div>
+    </div>
+
+    <!-- Modal for zone images -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2 id="modal-title"></h2>
+            <img id="modal-image" src="" alt="Zone Image">
         </div>
     </div>
 
